update wizard model

--- a/all-links.html
+++ b/all-links.html
@@ -105,7 +105,7 @@
                         <a
                           href="#"
                           data-toggle="modal"
-                          data-target="#query-wizard-expression-modal"
+                          data-target="#query-wizard-expressions-new"
                           >Query Wizard
                         </a>
                       </p>
@@ -214,9 +214,9 @@
                               <div class="dropdown-logo">
                                 <img src="images/cisco_logo.png" />
                               </div>
-                              <!-- <div>
-                                        Big Sight
-                                      </div>                     -->
+                              <div>
+                                Cisco
+                              </div>
                             </div>
 
                             <ul class="dropdown dropdown-with-logos">
@@ -260,7 +260,7 @@
                               id="cars"
                               class="query-wizard-dropdown-large"
                             >
-                              <option value="volvo">ID</option>
+                              <option value="volvo">Public IPs</option>
                               <option value="saab">Saab</option>
                               <option value="mercedes">Mercedes</option>
                               <option value="audi">Audi</option>
@@ -319,9 +319,9 @@
                               <div class="dropdown-logo">
                                 <img src="images/cisco_logo.png" />
                               </div>
-                              <!-- <div>
-                                        Big Sight
-                                      </div>                     -->
+                              <div>
+                                Cisco
+                              </div>
                             </div>
 
                             <ul class="dropdown dropdown-with-logos">
@@ -403,16 +403,144 @@
                         <div class="query-wizard-exp-btn">
                           <a href="#" class="rule-btn">
                             <span>+</span>
-                            Rule
+                            &nbsp;&nbsp; Rule
                           </a>
                           <a href="#">
                             <span>+</span>
-                            Stamenets Group
+                            &nbsp;&nbsp;Stamenets Group
                           </a>
                         </div>
                       </div>
                     </div>
 
+                    <div class="and-or-div">
+                      <div class="query-toggle-btn-div">
+                        <div class="togleBtn">AND <span>OR</span></div>
+                      </div>
+                    </div>
+                    <div class="query-wizard-exp-contents">
+                      <div class="query-wizard-expension">
+                        <div class="fields-wrappter">
+                          <div class="hidden query-wizard-div-box">
+                            <select id="cars" class="and-select">
+                              <option value="volvo">and</option>
+                              <option value="saab">Saab</option>
+                              <option value="mercedes">Mercedes</option>
+                              <option value="audi">Audi</option>
+                            </select>
+                          </div>
+
+                          <div class="disabled-input query-wizard-div-box">
+                            NOT
+                          </div>
+
+                          <div class="query-wizard-div-box">
+                            <select id="cars" class="all-select">
+                              <option value="volvo">ALL</option>
+                              <option value="saab">Saab</option>
+                              <option value="mercedes">Mercedes</option>
+                              <option value="audi">Audi</option>
+                            </select>
+                          </div>
+
+                          <div id="dd" class="dropdown-with-img" tabindex="1">
+                            <div class="dropdown-with-img-select">
+                              <div class="dropdown-logo">
+                                <img src="images/cisco_logo.png" />
+                              </div>
+                              <div>
+                                Cisco
+                              </div>
+                            </div>
+
+                            <ul class="dropdown dropdown-with-logos">
+                              <li>
+                                <a href="#">
+                                  <div class="dropdown-logo">
+                                    <img src="images/bigsight-logo.png" />
+                                  </div>
+                                  <div>
+                                    Big Sight
+                                  </div>
+                                </a>
+                              </li>
+
+                              <li>
+                                <a href="#">
+                                  <div class="dropdown-logo">
+                                    <img src="images/cylance_logo.png" />
+                                  </div>
+                                  <div>
+                                    Cylence
+                                  </div>
+                                </a>
+                              </li>
+
+                              <li>
+                                <a href="#">
+                                  <div class="dropdown-logo">
+                                    <img src="images/fortigate_logo.png" />
+                                  </div>
+                                  <div>
+                                    Fortigate
+                                  </div>
+                                </a>
+                              </li>
+                            </ul>
+                          </div>
+
+                          <div class="query-wizard-div-box">
+                            <select
+                              id="cars"
+                              class="query-wizard-dropdown-large"
+                            >
+                              <option value="volvo">Public IPs</option>
+                              <option value="saab">Saab</option>
+                              <option value="mercedes">Mercedes</option>
+                              <option value="audi">Audi</option>
+                            </select>
+                          </div>
+
+                          <div class="query-wizard-div-box">
+                            <select id="cars" class="exists-dropdown">
+                              <option value="volvo">exists</option>
+                              <option value="saab">Saab</option>
+                              <option value="mercedes">Mercedes</option>
+                              <option value="audi">Audi</option>
+                            </select>
+                          </div>
+
+                          <!-- <div class="query-wizard-div-box hidden">
+                          <select id="cars" class="medium-dropdown">
+                            <option value="volvo">Windows</option>
+                            <option value="saab">Saab</option>
+                            <option value="mercedes">Mercedes</option>
+                            <option value="audi">Audi</option>
+                          </select>
+                        </div> -->
+                        </div>
+                        <div>
+                          <div class="close-action">
+                            <a href="#">
+                              <img src="images/close-small.svg" />
+                            </a>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="query-wizard-expension">
+                        <div class="query-wizard-exp-btn">
+                          <a href="#" class="rule-btn">
+                            <span>+</span>
+                            &nbsp;&nbsp; Rule
+                          </a>
+                          <a href="#">
+                            <span>+</span>
+                            &nbsp;&nbsp;Stamenets Group
+                          </a>
+                        </div>
+                      </div>
+                    </div>
                     <div
                       class="two-col-space-between"
                       style="margin-top: 40px;"
@@ -435,7 +563,7 @@
     <!-- Modal Query wizard expressions -->
     <div
       class="modal fade"
-      id="query-wizard-expressions-modal"
+      id="query-wizard-expressions-new"
       tabindex="-1"
       role="dialog"
       aria-labelledby="exampleModalLabel"
