new changes update model

--- a/all-links.html
+++ b/all-links.html
@@ -140,13 +140,8 @@
                   <div class="query-wizard-exp-contents">
                     <div class="query-wizard-expension">
                       <div class="fields-wrappter">
-                        <div class="hidden query-wizard-div-box">
-                          <select id="cars" class="and-select">
-                            <option value="volvo">and</option>
-                            <option value="saab">Saab</option>
-                            <option value="mercedes">Mercedes</option>
-                            <option value="audi">Audi</option>
-                          </select>
+                        <div class="query-toggle-btn-div hidden">
+                          <div class="togleBtn">AND <span>OR</span></div>
                         </div>
 
                         <div class="disabled-input query-wizard-div-box">
@@ -237,8 +232,8 @@
                       </div>
                       <div>
                         <div class="close-action">
-                          <a href="#">
-                            <img src="images/close-small.svg" />
+                          <a href="#" style="text-decoration: none;">
+                            X
                           </a>
                         </div>
                       </div>
@@ -339,8 +334,8 @@
                       </div>
                       <div>
                         <div class="close-action">
-                          <a href="#">
-                            <img src="images/close-small.svg" />
+                          <a href="#" style="text-decoration: none;">
+                            X
                           </a>
                         </div>
                       </div>
@@ -465,8 +460,8 @@
                       </div>
                       <div>
                         <div class="close-action">
-                          <a href="#">
-                            <img src="images/close-small.svg" />
+                          <a href="#" style="text-decoration: none;">
+                            X
                           </a>
                         </div>
                       </div>
