--- a/all-links.html
+++ b/all-links.html
@@ -307,7 +307,7 @@
 
                         <div class="query-wizard-div-box">
                           <select id="cars" class="query-wizard-dropdown-large">
-                            <option value="volvo">ID</option>
+                            <option value="volvo">Adapter Properties</option>
                             <option value="saab">Saab</option>
                             <option value="mercedes">Mercedes</option>
                             <option value="audi">Audi</option>
@@ -325,7 +325,7 @@
 
                         <div class="query-wizard-div-box">
                           <select id="cars" class="medium-dropdown">
-                            <option value="volvo">Windows</option>
+                            <option value="volvo">equals</option>
                             <option value="saab">Saab</option>
                             <option value="mercedes">Mercedes</option>
                             <option value="audi">Audi</option>
@@ -363,13 +363,8 @@
                   <div class="query-wizard-exp-contents">
                     <div class="query-wizard-expension">
                       <div class="fields-wrappter">
-                        <div class="hidden query-wizard-div-box">
-                          <select id="cars" class="and-select">
-                            <option value="volvo">and</option>
-                            <option value="saab">Saab</option>
-                            <option value="mercedes">Mercedes</option>
-                            <option value="audi">Audi</option>
-                          </select>
+                        <div class="query-toggle-btn-div hidden">
+                          <div class="togleBtn">AND <span>OR</span></div>
                         </div>
 
                         <div class="disabled-input query-wizard-div-box">
@@ -388,7 +383,7 @@
                         <div id="dd" class="dropdown-with-img" tabindex="1">
                           <div class="dropdown-with-img-select">
                             <div class="dropdown-logo">
-                              <img src="images/cisco_logo.png" />
+                              <img src="images/cisco_logo.png">
                             </div>
                             <div>
                               Cisco
@@ -399,7 +394,7 @@
                             <li>
                               <a href="#">
                                 <div class="dropdown-logo">
-                                  <img src="images/bigsight-logo.png" />
+                                  <img src="images/bigsight-logo.png">
                                 </div>
                                 <div>
                                   Big Sight
@@ -410,7 +405,7 @@
                             <li>
                               <a href="#">
                                 <div class="dropdown-logo">
-                                  <img src="images/cylance_logo.png" />
+                                  <img src="images/cylance_logo.png">
                                 </div>
                                 <div>
                                   Cylence
@@ -421,7 +416,7 @@
                             <li>
                               <a href="#">
                                 <div class="dropdown-logo">
-                                  <img src="images/fortigate_logo.png" />
+                                  <img src="images/fortigate_logo.png">
                                 </div>
                                 <div>
                                   Fortigate
@@ -467,6 +462,9 @@
                       </div>
                     </div>
 
+                    <!--Add field row-->
+
+
                     <div class="query-wizard-expension mb-1">
                       <div class="query-wizard-exp-btn">
                         <a href="#" class="rule-btn">
@@ -487,7 +485,7 @@
                       <button type="button" class="theme-btn">Save</button>
                     </div>
                     &nbsp;<div class="query-toggle-btn-div">
-                      <div class="togleBtnDisable">AND <span>OR</span></div>
+                      <div class="togleBtnDisable"><span>AND</span> OR</div>
                     </div>
 
 
