--- a/all-links.html
+++ b/all-links.html
@@ -144,7 +144,7 @@
                           <div class="togleBtn">AND <span>OR</span></div>
                         </div>
 
-                        <div class="disabled-input query-wizard-div-box">
+                        <div class="disabled-input query-wizard-div-box not-line-div">
                           NOT
                         </div>
 
@@ -246,7 +246,7 @@
                           <div class="togleBtn">AND <span>OR</span></div>
                         </div>
 
-                        <div class="disabled-input query-wizard-div-box">
+                        <div class="disabled-input query-wizard-div-box not-line-div">
                           NOT
                         </div>
 
