scroll changes fixed on query wizard model

--- a/all-links.html
+++ b/all-links.html
@@ -312,6 +312,18 @@
                                 </div>
                               </span>
                             </li>
+                            <li class="" style="visibility: hidden !important;">
+                              <span>
+                                <div class="query-wizard-div-box">
+                                  <select id="cars" class="medium-dropdown">
+                                    <option value="volvo">equals</option>
+                                    <option value="saab">Saab</option>
+                                    <option value="mercedes">Mercedes</option>
+                                    <option value="audi">Audi</option>
+                                  </select>
+                                </div>
+                              </span>
+                            </li>
                           </ul>
                         </div>
                         <div>
@@ -474,7 +486,7 @@
                       </div>
 
                       <!--rule btn row-->
-                      <div class="query-wizard-expension mb-1">
+                      <div class="query-wizard-expension mb-1 mt-4">
                         <div class="query-wizard-exp-btn">
                           <a href="#" class="rule-btn">
                             <span>+</span>
@@ -621,6 +633,18 @@
                                 </div>
                               </span>
                             </li>
+                            <li class="" style="visibility: hidden !important;">
+                              <span>
+                                <div class="query-wizard-div-box">
+                                  <select id="cars" class="medium-dropdown">
+                                    <option value="volvo">equals</option>
+                                    <option value="saab">Saab</option>
+                                    <option value="mercedes">Mercedes</option>
+                                    <option value="audi">Audi</option>
+                                  </select>
+                                </div>
+                              </span>
+                            </li>
                           </ul>
                         </div>
                         <div>
@@ -633,7 +657,7 @@
                       </div>
 
                       <!--rule btn row-->
-                      <div class="query-wizard-expension mb-1">
+                      <div class="query-wizard-expension mb-1 mt-4">
                         <div class="query-wizard-exp-btn">
                           <a href="#" class="rule-btn">
                             <span>+</span>
