no arrow class add

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -453,7 +453,7 @@
                                   <span>FAIL</span>
                                 </li>
                                 <li>
-                                  <span>POST</span>
+                                  <span class="no-arrow">POST</span>
                                 </li>
                               </ul>
                             </div>
