policy page all changes done

--- a/all-links.html
+++ b/all-links.html
@@ -78,6 +78,18 @@
                     <p>
                       <a href="privacy-policy.html" target="_blank">Privacy Policy</a>
                     </p>
+                    <br />
+                    <br />
+                    <br />
+                    <p>
+                      <a href="privacy-policy-2nd.html" target="_blank">Privacy Policy 2 level</a>
+                    </p>
+                    <br />
+                    <br />
+                    <br />
+                    <p>
+                      <a href="privacy-policy-3rd.html" target="_blank">Privacy Policy 3 level</a>
+                    </p>
                   </div>
                 </div>
 
