--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -504,7 +504,7 @@
                                           </span>
                                           <span data-toggle="collapse" href="#multiCollapseExample1" role="button"
                                             aria-expanded="true" aria-controls="multiCollapseExample1"><img
-                                              src="images/minus.png"> </span>
+                                              src="images/down-arrow.svg"> </span>
                                         </div>
 
                                         <div class="multi-collapse collapse show" id="multiCollapseExample1" style="">
@@ -524,9 +524,7 @@
                                     </div>
                                     <div class="col-lg-6">
                                       <div class="policy-accordions-box">
-                                        <div class="collapse-heading-btn-row" data-toggle="collapse"
-                                          href="#multiCollapseExample2" role="button" aria-expanded="true"
-                                          aria-controls="multiCollapseExample2">
+                                        <div class="collapse-heading-btn-row">
                                           <span>
                                             <div>
                                               <img src="images/enrich-devices-icon.png">
@@ -535,7 +533,9 @@
                                               Enrich Device or User Data
                                             </div>
                                           </span>
-                                          <span><img src="images/minus.png"> </span>
+                                          <span data-toggle="collapse" href="#multiCollapseExample2" role="button"
+                                            aria-expanded="true" aria-controls="multiCollapseExample2"><img
+                                              src="images/down-arrow.svg"> </span>
                                         </div>
 
                                         <div class="multi-collapse collapse show" id="multiCollapseExample2" style="">
@@ -555,10 +555,8 @@
 
                                     <div class="col-lg-6">
 
-                                      <div class="policy-accordions-box p-selected">
-                                        <div class="collapse-heading-btn-row" data-toggle="collapse"
-                                          href="#multiCollapseExample3" role="button" aria-expanded="true"
-                                          aria-controls="multiCollapseExample3">
+                                      <div class="policy-accordions-box ">
+                                        <div class="collapse-heading-btn-row">
                                           <span>
                                             <div>
                                               <img src="images/run-command.png">
@@ -567,7 +565,9 @@
                                               Run Commend
                                             </div>
                                           </span>
-                                          <span><img src="images/minus.png"> </span>
+                                          <span data-toggle="collapse" href="#multiCollapseExample3" role="button"
+                                            aria-expanded="true" aria-controls="multiCollapseExample3"><img
+                                              src="images/down-arrow.svg"> </span>
                                         </div>
 
                                         <div class="multi-collapse collapse show" id="multiCollapseExample3" style="">
@@ -587,9 +587,7 @@
                                     </div>
                                     <div class="col-lg-6">
                                       <div class="policy-accordions-box">
-                                        <div class="collapse-heading-btn-row" data-toggle="collapse"
-                                          href="#multiCollapseExample4" role="button" aria-expanded="true"
-                                          aria-controls="multiCollapseExample4">
+                                        <div class="collapse-heading-btn-row">
                                           <span>
                                             <div>
                                               <img src="images/create-incident-icon.png">
@@ -598,7 +596,9 @@
                                               Create Incident
                                             </div>
                                           </span>
-                                          <span><img src="images/minus.png"> </span>
+                                          <span data-toggle="collapse" href="#multiCollapseExample4" role="button"
+                                            aria-expanded="true" aria-controls="multiCollapseExample4"><img
+                                              src="images/down-arrow.svg"> </span>
                                         </div>
 
                                         <div class="multi-collapse collapse show" id="multiCollapseExample4" style="">
@@ -618,10 +618,8 @@
 
                                     <div class="col-lg-6">
 
-                                      <div class="policy-accordions-box p-selected">
-                                        <div class="collapse-heading-btn-row" data-toggle="collapse"
-                                          href="#multiCollapseExample5" role="button" aria-expanded="true"
-                                          aria-controls="multiCollapseExample5">
+                                      <div class="policy-accordions-box ">
+                                        <div class="collapse-heading-btn-row">
                                           <span>
                                             <div>
                                               <img src="images/execute-endpoint-sec-icon.png">
@@ -630,7 +628,9 @@
                                               Execute Endpoint Security Agent Action
                                             </div>
                                           </span>
-                                          <span><img src="images/minus.png"> </span>
+                                          <span data-toggle="collapse" href="#multiCollapseExample5" role="button"
+                                            aria-expanded="true" aria-controls="multiCollapseExample5"><img
+                                              src="images/down-arrow.svg"> </span>
                                         </div>
 
                                         <div class="multi-collapse collapse show" id="multiCollapseExample5" style="">
@@ -650,9 +650,7 @@
                                     </div>
                                     <div class="col-lg-6">
                                       <div class="policy-accordions-box">
-                                        <div class="collapse-heading-btn-row" data-toggle="collapse"
-                                          href="#multiCollapseExample6" role="button" aria-expanded="true"
-                                          aria-controls="multiCollapseExample6">
+                                        <div class="collapse-heading-btn-row">
                                           <span>
                                             <div>
                                               <img src="images/create-cmdb-icon.png">
@@ -661,7 +659,9 @@
                                               Create CMDB Computer
                                             </div>
                                           </span>
-                                          <span><img src="images/minus.png"> </span>
+                                          <span data-toggle="collapse" href="#multiCollapseExample6" role="button"
+                                            aria-expanded="true" aria-controls="multiCollapseExample6"><img
+                                              src="images/down-arrow.svg"> </span>
                                         </div>
 
                                         <div class="multi-collapse collapse show" id="multiCollapseExample6" style="">
@@ -682,9 +682,7 @@
                                     <div class="col-lg-6">
 
                                       <div class="policy-accordions-box">
-                                        <div class="collapse-heading-btn-row" data-toggle="collapse"
-                                          href="#multiCollapseExample12" role="button" aria-expanded="true"
-                                          aria-controls="multiCollapseExample12">
+                                        <div class="collapse-heading-btn-row">
                                           <span>
                                             <div>
                                               <img src="images/update-vA-icon.png">
@@ -693,7 +691,9 @@
                                               Update VA Coverage
                                             </div>
                                           </span>
-                                          <span><img src="images/minus.png"> </span>
+                                          <span data-toggle="collapse" href="#multiCollapseExample12" role="button"
+                                            aria-expanded="true" aria-controls="multiCollapseExample12"><img
+                                              src="images/down-arrow.svg"> </span>
                                         </div>
 
                                         <div class="multi-collapse collapse show" id="multiCollapseExample12" style="">
@@ -712,10 +712,8 @@
 
                                     </div>
                                     <div class="col-lg-6">
-                                      <div class="policy-accordions-box p-selected">
-                                        <div class="collapse-heading-btn-row" data-toggle="collapse"
-                                          href="#multiCollapseExample7" role="button" aria-expanded="true"
-                                          aria-controls="multiCollapseExample7">
+                                      <div class="policy-accordions-box ">
+                                        <div class="collapse-heading-btn-row">
                                           <span>
                                             <div>
                                               <img src="images/manage-active-direcory-icon.png">
@@ -724,7 +722,9 @@
                                               Manage Microsoft Active Directory (AD) Service
                                             </div>
                                           </span>
-                                          <span><img src="images/minus.png"> </span>
+                                          <span data-toggle="collapse" href="#multiCollapseExample7" role="button"
+                                            aria-expanded="true" aria-controls="multiCollapseExample7"><img
+                                              src="images/down-arrow.svg"> </span>
                                         </div>
 
                                         <div class="multi-collapse collapse show" id="multiCollapseExample7" style="">
@@ -745,9 +745,7 @@
                                     <div class="col-lg-6">
 
                                       <div class="policy-accordions-box">
-                                        <div class="collapse-heading-btn-row" data-toggle="collapse"
-                                          href="#multiCollapseExample8" role="button" aria-expanded="true"
-                                          aria-controls="multiCollapseExample8">
+                                        <div class="collapse-heading-btn-row">
                                           <span>
                                             <div>
                                               <img src="images/manage-microsoft-azur-icon.png">
@@ -756,7 +754,9 @@
                                               Manage Microsoft Azure Services
                                             </div>
                                           </span>
-                                          <span><img src="images/minus.png"> </span>
+                                          <span data-toggle="collapse" href="#multiCollapseExample8" role="button"
+                                            aria-expanded="true" aria-controls="multiCollapseExample8"><img
+                                              src="images/down-arrow.svg"> </span>
                                         </div>
 
                                         <div class="multi-collapse collapse show" id="multiCollapseExample8" style="">
@@ -776,9 +776,7 @@
                                     </div>
                                     <div class="col-lg-6">
                                       <div class="policy-accordions-box">
-                                        <div class="collapse-heading-btn-row" data-toggle="collapse"
-                                          href="#multiCollapseExample9" role="button" aria-expanded="true"
-                                          aria-controls="multiCollapseExample9">
+                                        <div class="collapse-heading-btn-row">
                                           <span>
                                             <div>
                                               <img src="images/manage-aws-icon.png">
@@ -787,7 +785,9 @@
                                               Manage AWS Services
                                             </div>
                                           </span>
-                                          <span><img src="images/minus.png"> </span>
+                                          <span data-toggle="collapse" href="#multiCollapseExample9" role="button"
+                                            aria-expanded="true" aria-controls="multiCollapseExample9"><img
+                                              src="images/down-arrow.svg"> </span>
                                         </div>
 
                                         <div class="multi-collapse collapse show" id="multiCollapseExample9" style="">
@@ -808,9 +808,7 @@
                                     <div class="col-lg-6">
 
                                       <div class="policy-accordions-box">
-                                        <div class="collapse-heading-btn-row" data-toggle="collapse"
-                                          href="#multiCollapseExample10" role="button" aria-expanded="true"
-                                          aria-controls="multiCollapseExample10">
+                                        <div class="collapse-heading-btn-row">
                                           <span>
                                             <div>
                                               <img src="images/vinventa-utilities-icon.png">
@@ -819,7 +817,9 @@
                                               vInventa Utilities
                                             </div>
                                           </span>
-                                          <span><img src="images/minus.png"> </span>
+                                          <span data-toggle="collapse" href="#multiCollapseExample10" role="button"
+                                            aria-expanded="true" aria-controls="multiCollapseExample10"><img
+                                              src="images/down-arrow.svg"> </span>
                                         </div>
 
                                         <div class="multi-collapse collapse show" id="multiCollapseExample10" style="">
@@ -839,9 +839,7 @@
                                     </div>
                                     <div class="col-lg-6">
                                       <div class="policy-accordions-box">
-                                        <div class="collapse-heading-btn-row" data-toggle="collapse"
-                                          href="#multiCollapseExample11" role="button" aria-expanded="true"
-                                          aria-controls="multiCollapseExample11">
+                                        <div class="collapse-heading-btn-row">
                                           <span>
                                             <div>
                                               <img src="images/notify-icon.png">
@@ -850,7 +848,9 @@
                                               Notify
                                             </div>
                                           </span>
-                                          <span><img src="images/minus.png"> </span>
+                                          <span data-toggle="collapse" href="#multiCollapseExample11" role="button"
+                                            aria-expanded="true" aria-controls="multiCollapseExample11"><img
+                                              src="images/down-arrow.svg"> </span>
                                         </div>
 
                                         <div class="multi-collapse collapse show" id="multiCollapseExample11" style="">
@@ -907,7 +907,7 @@
                             </div>
 
                             <!--three button row-->
-                            <div class="search-section-buttons mt-4">
+                            <div class="search-section-buttons policy-btns-wrapper mt-4">
                               <button type="button" class="theme-btn graydient-secondary-btn">Run and Save</button>
                               <button type="button" class="theme-btn graydient-secondary-btn">Save and Exit</button>
                               <button type="button" class="theme-btn graydient-primary-btn">Apply</button>
